--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
   </head>
   <body>
     <header>
+      <a id="logo" href="#logo" class="logo"><span>Web</span>Studio</a>
       <nav>
-        <ul>
-          <li>
-            <a id="logo" href="#logo" class="logo"><span>Web</span>Studio</a>
-          </li>
+        <ul class="header-nav">
           <li>Студія</li>
           <li>Портфоліо</li>
           <li>Контакти</li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+380961111111">+380 96 111 11 11</a>
+      <ul class="contacts">
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+380 96 111 11 11</a></li>
+      </ul>
     </header>
     <main>
       <section class="hero">
