--- a/index.html
+++ b/index.html
@@ -28,76 +28,90 @@
         <button type="button">Замовити послугу</button>
       </section>
       <section class="features">
-        <div>
-          <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-          <p>
-            Ідейні міркування, і навіть початок повсякденної роботи з формування
-            позиції.
-          </p>
-        </div>
-        <div>
-          <h3>ПУНКТУАЛЬНІСТЬ</h3>
-          <p>
-            Завдання організації, особливо рамки і місце навчання кадрів тягне у
-            себе.
-          </p>
-        </div>
-        <div>
-          <h3>ПЛАНУВАННЯ</h3>
-          <p>Так само консультація з широким активом значною мірою зумовлює.</p>
-        </div>
-        <div>
-          <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-          <p>
-            Значимість цих проблем настільки очевидна, що реалізація планових
-            завдань.
-          </p>
-        </div>
+        <ul>
+          <li>
+            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p>
+              Ідейні міркування, і навіть початок повсякденної роботи з
+              формування позиції.
+            </p>
+          </li>
+          <li>
+            <h3>ПУНКТУАЛЬНІСТЬ</h3>
+            <p>
+              Завдання організації, особливо рамки і місце навчання кадрів тягне
+              у себе.
+            </p>
+          </li>
+          <li>
+            <h3>ПЛАНУВАННЯ</h3>
+            <p>
+              Так само консультація з широким активом значною мірою зумовлює.
+            </p>
+          </li>
+          <li>
+            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p>
+              Значимість цих проблем настільки очевидна, що реалізація планових
+              завдань.
+            </p>
+          </li>
+        </ul>
       </section>
       <section class="services">
         <h2>Чим ми займаємося</h2>
-        <img src="images/service_1.jpg" alt="Web development" width="370" />
-        <img src="images/service_2.jpg" alt="UI/UX Design" width="370" />
-        <img src="images/service_3.jpg" alt="Graphic design" width="370" />
+        <ul>
+          <li>
+            <img src="images/service_1.jpg" alt="Web development" width="370" />
+          </li>
+          <li>
+            <img src="images/service_2.jpg" alt="UI/UX Design" width="370" />
+          </li>
+          <li>
+            <img src="images/service_3.jpg" alt="Graphic design" width="370" />
+          </li>
+        </ul>
       </section>
       <section class="team">
         <h2>Наша команда</h2>
-        <div class="team-member">
-          <img
-            src="images/team-member-1.jpg"
-            alt="photo of Ihor, product designer"
-            width="270"
-          />
-          <p>Ігор Дем'яненко</p>
-          <p>Product Designer</p>
-        </div>
-        <div class="team-member">
-          <img
-            src="images/team-member-2.jpg"
-            alt="photo of Olha, frontend developer"
-            width="270"
-          />
-          <p>Ольга Рєпіна</p>
-          <p>Frontend Developer</p>
-        </div>
-        <div class="team-member">
-          <img
-            src="images/team-member-3.jpg"
-            alt="photo of Mykola, Marketing specialist"
-            width="270"
-          />
-          <p>Микола Тарасов</p>
-          <p>Marketing</p>
-        </div>
-        <div class="team-member">
-          <img
-            src="images/team-member-4.jpg"
-            alt="photo of Mykhailo, UI Designer"
-            width="270"
-          />
-          <p>Михайло Єрмаков</p>
-          <p>UI Designer</p>
-        </div>
+        <ul>
+          <li class="team-member">
+            <img
+              src="images/team-member-1.jpg"
+              alt="photo of Ihor, product designer"
+              width="270"
+            />
+            <p>Ігор Дем'яненко</p>
+            <p>Product Designer</p>
+          </li>
+          <li class="team-member">
+            <img
+              src="images/team-member-2.jpg"
+              alt="photo of Olha, frontend developer"
+              width="270"
+            />
+            <p>Ольга Рєпіна</p>
+            <p>Frontend Developer</p>
+          </li>
+          <li class="team-member">
+            <img
+              src="images/team-member-3.jpg"
+              alt="photo of Mykola, Marketing specialist"
+              width="270"
+            />
+            <p>Микола Тарасов</p>
+            <p>Marketing</p>
+          </li>
+          <li class="team-member">
+            <img
+              src="images/team-member-4.jpg"
+              alt="photo of Mykhailo, UI Designer"
+              width="270"
+            />
+            <p>Михайло Єрмаков</p>
+            <p>UI Designer</p>
+          </li>
+        </ul>
       </section>
     </main>
     <footer>
