+.prettierrc.json, some mistakes fixed

--- a/index.html
+++ b/index.html
@@ -9,12 +9,18 @@
   </head>
   <body>
     <header>
-      <a id="logo" href="#logo" class="logo"><span>Web</span>Studio</a>
+      <a href="./index.html" class="logo"><span>Web</span>Studio</a>
       <nav>
         <ul class="header-nav">
-          <li>Студія</li>
-          <li>Портфоліо</li>
-          <li>Контакти</li>
+          <li>
+            <a href="./index.html">Студія</a>
+          </li>
+          <li>
+            <a href="./index.html">Портфоліо</a>
+          </li>
+          <li>
+            <a href="./index.html">Контакти</a>
+          </li>
         </ul>
       </nav>
       <ul class="contacts">
@@ -24,37 +30,27 @@
     </header>
     <main>
       <section class="hero">
-        <h1>ЭФЕКТИВНІ РІШЕННЯ</h1>
+        <h1>ефективні рішення для вашого бізнесу</h1>
         <button type="button">Замовити послугу</button>
       </section>
       <section class="features">
+        <h2></h2>
         <ul>
           <li>
-            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p>
-              Ідейні міркування, і навіть початок повсякденної роботи з
-              формування позиції.
-            </p>
+            <h3>увага до деталей</h3>
+            <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
           </li>
           <li>
-            <h3>ПУНКТУАЛЬНІСТЬ</h3>
-            <p>
-              Завдання організації, особливо рамки і місце навчання кадрів тягне
-              у себе.
-            </p>
+            <h3>пунктуальність</h3>
+            <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
           </li>
           <li>
-            <h3>ПЛАНУВАННЯ</h3>
-            <p>
-              Так само консультація з широким активом значною мірою зумовлює.
-            </p>
+            <h3>планування</h3>
+            <p>Так само консультація з широким активом значною мірою зумовлює.</p>
           </li>
           <li>
-            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p>
-              Значимість цих проблем настільки очевидна, що реалізація планових
-              завдань.
-            </p>
+            <h3>сучасні технології</h3>
+            <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
           </li>
         </ul>
       </section>
@@ -76,12 +72,8 @@
         <h2>Наша команда</h2>
         <ul>
           <li class="team-member">
-            <img
-              src="images/team-member-1.jpg"
-              alt="photo of Ihor, product designer"
-              width="270"
-            />
-            <p>Ігор Дем'яненко</p>
+            <img src="images/team-member-1.jpg" alt="photo of Ihor, product designer" width="270" />
+            <h3>Ігор Дем'яненко</h3>
             <p>Product Designer</p>
           </li>
           <li class="team-member">
@@ -90,7 +82,7 @@
               alt="photo of Olha, frontend developer"
               width="270"
             />
-            <p>Ольга Рєпіна</p>
+            <h3>Ольга Рєпіна</h3>
             <p>Frontend Developer</p>
           </li>
           <li class="team-member">
@@ -99,27 +91,34 @@
               alt="photo of Mykola, Marketing specialist"
               width="270"
             />
-            <p>Микола Тарасов</p>
+            <h3>Микола Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li class="team-member">
-            <img
-              src="images/team-member-4.jpg"
-              alt="photo of Mykhailo, UI Designer"
-              width="270"
-            />
-            <p>Михайло Єрмаков</p>
+            <img src="images/team-member-4.jpg" alt="photo of Mykhailo, UI Designer" width="270" />
+            <h3>Михайло Єрмаков</h3>
             <p>UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <footer>
-      <a href="#logo" class="logo"><span>Web</span>Studio</a>
+      <a href="./index.html" class="logo"><span>Web</span>Studio</a>
       <address>
-        м. Київ, пр-т Лесі Українки, 26 <br />
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
-        <a href="tel:+380961111111">+380 96 111 11 11</a>
+        <ul>
+          <li>
+            <a
+              href="https://goo.gl/maps/ifu1UcrwGc2GNokw5"
+              target="_blank"
+              rel="noopener nofollow  noreferrer"
+            >
+              м. Київ, пр-т Лесі Українки, 26
+            </a>
+          </li>
+          <a href=""></a>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111">+380 96 111 11 11</a></li>
+        </ul>
       </address>
     </footer>
   </body>
