--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>🔵WebStudio</title>
+    <title>WebStudio</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -16,10 +16,10 @@
             <a href="./index.html">Студія</a>
           </li>
           <li>
-            <a href="./index.html">Портфоліо</a>
+            <a href="./portfolio.html">Портфоліо</a>
           </li>
           <li>
-            <a href="./index.html">Контакти</a>
+            <a href="./">Контакти</a>
           </li>
         </ul>
       </nav>
